# rapid-crak

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  RUST_IMPLEMENTATION.md  l10n.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  router.dart
lib/core/domain/entities/: attack_entities.dart  index.dart
lib/core/extensions/: extensions.dart  loaded_file_extension.dart
lib/core/theme/: app_colors.dart  app_text_styles.dart  app_theme.dart
lib/core/utils/: formatters.dart  validators.dart
lib/generated_l10n/: app_localizations.dart  app_localizations_en.dart  app_localizations_pt.dart
lib/l10n/: app_en.arb  app_pt.arb  app_pt_BR.arb
lib/services/: file_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  password_cracker.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/: LICENSE  build_pod.sh
rust_builder/ios/: rust_lib_bruteforce_doc_break.podspec  rust_lib_rapid_crak.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_bruteforce_doc_break.podspec  rust_lib_rapid_crak.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+14 files in other folders)
