[package]
name = "rust_lib_rapid_crak"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

# Para ler e testar senhas em arquivos ZIP
zip = { version = "0.6", default-features = false, features = ["aes-crypto", "deflate"] }

# Paralelização automática em múltiplos núcleos da CPU
rayon = "1.10"

# Tratamento de erros
anyhow = "1.0"

# Mutex de alta performance
parking_lot = "0.12"

# Fast CRC32 checksum for ZipCrypto
crc32fast = "1.5.0"

# Optional: Memory-mapped file handling for large files
memmap2 = "0.9"

[profile.release]
# Aggressive optimizations for maximum performance
opt-level = 3          # Maximum optimization
lto = "fat"            # Link-time optimization across all crates
codegen-units = 1      # Single codegen unit for better optimization
strip = true           # Strip debug symbols to reduce binary size
panic = "abort"        # Abort on panic for smaller binary and faster code

[profile.release.package."*"]
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
